--- a/tswnavbar.css
+++ b/tswnavbar.css
@@ -26,7 +26,7 @@
 #tswcssbuttons li a {
 	color: #AC2B37 ;
 	background-color: #ffffff ;
-	border: 1px solid #AC2B37 ;
+	border: 1px solid #ffffff ;
 	text-decoration: none ;
 	display: block ;
 }
