--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 #tswheader,
 #tswsidecol,
 #tswfooter {
-    background: linear-gradient(135deg, #764ba2 0%, #667eea 100%);
+    background: linear-gradient(-30deg, #f700ff 0%, #00fff2 120%);
     color: #ffffff; /* White text for better readability on the gradient */
 }
 
