--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* General Body Styles */
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    background-color: #f0f2f5; /* A light grey-blue background */
+    background-color: #afafaf; /* A light grey-blue background */
     color: #1c1e21;
     margin: 0;
     padding: 0;
@@ -11,8 +11,9 @@ body {
 #tswheader,
 #tswsidecol,
 #tswfooter {
-    background: linear-gradient(-30deg, #f700ff 0%, #00fff2 120%);
+    background: linear-gradient(-30deg, #f700ff 40%, #00fff2 130%);
     color: #ffffff; /* White text for better readability on the gradient */
+    
 }
 
 /* Add padding to the inner containers to avoid breaking float layout */
@@ -48,16 +49,19 @@ body {
 /* Style for the navigation links in the sidebar to make them visible and more usable */
 #tswcssbuttons {
     text-align: center;
+    
 }
 
 #tswcssbuttons ul {
     list-style: none;
     padding: 0;
     margin: 0;
+    opacity: 1;
 }
 
 #tswcssbuttons li {
     margin-bottom: 8px;
+    opacity: 1;
 }
 
 #tswcssbuttons ul li a {
@@ -69,13 +73,15 @@ body {
     padding: 12px 0;
     border-radius: 5px;
     transition: all 0.5s ease-in-out;
+    opacity: 1;
 }
 
 #tswcssbuttons ul li a:hover {
     color: white;
-    background: linear-gradient(135deg, #ea00ff 30%, #00ccff 100%); /* Gold/brown on hover */
+    background: linear-gradient(135deg, #ea00ff 30%, #00ccff 100%);; /* Gold/brown on hover */
     border-color: #000000; /* Match border color on hover */
     text-decoration: none;
+    opacity: 1;
 }
 
 /* Content area styling */
