--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 /* General Body Styles */
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #474747; /* A light grey-blue background */
     color: #1c1e21;
     margin: 0;
@@ -16,12 +16,13 @@ body {
 }
 
 #tswsidecol {
+    width: 0;
     padding: 20px;
 }
 
 /* Gradient theme for header, sidebar, and footer */
 #tswheader, #tswfooter {
-    background: linear-gradient(135deg, rgba(234, 0, 255, 0.75) 30%, rgba(0, 204, 255, 0.75) 100%);
+    background: linear-gradient(135deg, rgba(234, 0, 255, 1) 30%, rgba(0, 204, 255, 1) 100%);
     color: #ffffff; 
     border: #474747 1px solid;/* White text for better readability on the gradient */
     border-radius: 10px;
